добавление в api данных о пользователе и тестирование
